--- a/Ai18nWithoutxml/src/main/resources/locale/messages_en.properties
+++ b/Ai18nWithoutxml/src/main/resources/locale/messages_en.properties
@@ -1,4 +1,4 @@
-welcome.message = Hello, Vinodh. Good to meet you.
+welcome.message = Hello, User. Good to meet you.
 lbl.fname = First Name
 lbl.lname = Last Name
 txt.country = Country
